Stat/tob/tps/mini-projet/evaluations/evaluation1/CercleTest.java.log
CercleTest.java:29: error: cannot find symbol
		C2 = new Cercle(A,B,blue);
		                    ^
  symbol:   variable blue
  location: class CercleTest
1 error
